removed scrollbar, fixed images

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,6 +3,9 @@ html {
     overflow-x: hidden;
     
   }
+  body::-webkit-scrollbar {
+    display: none;
+  }
 .subTitle {
     margin-top: 4em;
 }
